# simple-cmake

./: CMakeLists.txt  README.md
api/: CMakeLists.txt
api/include/: api.h
api/src/: apimain.cpp
example/: CMakeLists.txt  main.cpp
modules/module1/: CMakeLists.txt
modules/module1/include/: module1.h
modules/module1/src/: module1.cpp
modules/module2/: CMakeLists.txt
modules/module2/include/: module2.h
modules/module2/src/: module2.cpp
